# ShapeLibWrapper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
shapelib_wrapper/: CMakeLists.txt  dbf.cpp  dbf.h  shapelib_wrapper.cpp  shapelib_wrapper.h  shp.cpp  shp.h
